# muon

./: BUILD.gn
app/win/: BUILD.gn
atom/app/: BUILD.gn  atom_main.cc  atom_main_delegate.cc
atom/browser/: BUILD.gn  atom_browser_client.cc  atom_browser_main_parts.cc  atom_browser_main_parts.h  native_window_views_win.cc
atom/browser/api/: atom_api_app.cc
atom/common/: BUILD.gn
brave/browser/: BUILD.gn  brave_browser_context.cc  brave_content_browser_client.cc
chromium_src/: BUILD.gn
chromium_src/chrome/browser/: browser_process_impl.cc  browser_process_impl.h
chromium_src/chrome/browser/lifetime/: browser_close_manager.cc
muon/app/: BUILD.gn  muon_crash_reporter_client.cc  muon_crash_reporter_client.h
patches/: master_patch.patch
