source_set("app") {
  public_configs = [
    "//electron/build:electron_config",
  ]

  sources = [
    "muon_crash_reporter_client.cc",
    "muon_crash_reporter_client.h",
  ]

  deps = [
    "//components/crash/content/app:app_breakpad_mac_win_to_be_deleted",
    "//components/metrics",
    "//components/prefs",
    "//electron/chromium_src:browser",
    "//electron/chromium_src:app",
  ]
}
