source_set("app") {
  public_configs = [
    "//electron/build:electron_config",
  ]

  sources = [
    "muon_crash_reporter_client.cc",
    "muon_crash_reporter_client.h",
  ]

  deps = [
    "//components/crash/content/app",
    "//components/metrics",
    "//components/prefs",
    "//electron/chromium_src:browser",
    "//electron/chromium_src:app",
  ]

  if (is_mac || is_win) {
    deps += [
      # TODO(bridiver) - add crashpad_handler.exe to win??
      "//third_party/crashpad/crashpad/handler:crashpad_handler",
      "//third_party/crashpad/crashpad/tools:crashpad_database_util",
    ]
  }
}
